--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="nav">
       <div class="nav__wrapper">
         <figure class="nav__img--mask">
-          <img class="nav__img" src="" alt="logo" />
+          <img class="nav__img" src="./assets/logo.png" alt="logo" />
         </figure>
         <ul class="nav__list--wrapper">
           <li class="nav__list nav__list--login">Login</li>
@@ -40,7 +40,7 @@
               <button class="btn home__cta--btn">Login</button>
             </div>
             <figure class="landing__image--mask">
-              <img src="" alt="landing" />
+              <img src="./assets/landing.png" alt="landing" />
             </figure>
           </div>
         </div>
